# zoo_to_gym_multiagent_adapter

./: .gitignore  AUTHORS.txt  README.md  pyproject.toml  requirements.txt  setup.py
example/: usage_example.py
zoo_to_gym_multiagent_adapter/: __init__.py  multiagent_zoo_to_gym_adapter.py  singleagent_zoo_to_gym_adapter.py
